--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-scripts": "5.0.0",
     "smooth-scrollbar": "^8.7.2",
     "smooth-scrollbar-react": "^2.3.0",
-    "socket.io-client": "^4.4.1",
+    "socket.io": "^2.0.1",
+    "socket.io-client": "^2.0.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2",
