--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "smooth-scrollbar": "^8.7.2",
