--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "10.0.2",
+    "date-fns": "^2.28.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "formik": "^2.2.9",
@@ -76,7 +77,7 @@
     "@types/styled-components": "^5.1.20"
   },
   "engines": {
-   "node": "16.x",
-   "yarn": "1.x"
+    "node": "16.x",
+    "yarn": "1.x"
   }
 }
