--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gsap": "^3.9.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "randomstring": "^1.2.2",
     "react": "^17.0.2",
     "react-data-table-component": "^7.4.6",
     "react-debounce-input": "^3.2.5",
