--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@feathersjs/socketio-client": "^4.5.13",
     "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.3",
+    "@mui/base": "^5.0.0-alpha.73",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.4.0",
