--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
+    "react-pdf": "^5.7.2",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
