--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.4.2",
+    "@react-pdf/renderer": "^2.1.1",
     "autoprefixer": "10.0.2",
     "date-fns": "^2.28.0",
     "eslint-config-prettier": "^8.3.0",
@@ -40,7 +41,6 @@
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
-    "react-pdf": "^5.7.2",
     "react-jutsu": "^3.0.3",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.2.1",
