--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "firebase": "^9.8.1",
     "framer-motion": "^5.5.5",
     "gsap": "^3.9.1",
     "postcss": "^8.4.5",
@@ -44,6 +45,7 @@
     "react-json-editor-ajrm": "^2.5.13",
     "react-jutsu": "^3.0.3",
     "react-preloaders": "^3.0.3",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-semantic-ui-datepickers": "^2.17.1",
