--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "eslint-auto-fix": "^1.0.4",
+    "eslint-config-react-app": "6",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^5.5.5",
