--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.4.2",
     "@react-pdf/renderer": "^2.1.1",
+    "apexcharts": "^3.35.4",
     "autoprefixer": "10.0.2",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
@@ -34,6 +35,7 @@
     "gsap": "^3.9.1",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-autosuggest": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-data-table-component": "^7.4.6",
