--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@babel/core": "7.0.0",
     "@date-io/date-fns": "^2.13.1",
     "@devexpress/dx-react-core": "^3.0.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@feathersjs/authentication-client": "^4.5.13",
     "@feathersjs/client": "^4.5.13",
     "@feathersjs/feathers": "^4.5.12",
@@ -15,13 +13,6 @@
     "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.3",
     "@mui/base": "^5.0.0-alpha.76",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/lab": "^5.0.0-alpha.66",
-    "@mui/material": "^5.4.0",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "@mui/styles": "^5.4.2",
-    "@mui/system": "^5.10.8",
-    "@mui/x-date-pickers": "^5.0.4",
     "autoprefixer": "10.0.2",
     "axios": "^0.26.1",
     "bulma": "^0.9.4",
@@ -36,25 +27,17 @@
     "leaflet": "^1.9.2",
     "postcss": "^8.4.5",
     "random-string-generator": "^1.0.0",
-    "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-data-table-component": "^7.4.6",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-debounce-input": "^3.2.5",
-    "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
     "react-dropzone-uploader": "^2.11.0",
-    "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-json-editor-ajrm": "^2.5.13",
     "react-jutsu": "^3.0.3",
     "react-leaflet": "^4.1.0",
     "react-preloaders": "^3.0.3",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
     "react-semantic-ui-datepickers": "^2.17.1",
     "react-to-print": "^2.14.7",
     "react-toastify": "^8.1.0",
@@ -64,8 +47,43 @@
     "smooth-scrollbar": "^8.7.2",
     "smooth-scrollbar-react": "^2.3.0",
     "socket.io-client": "^2.4.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.2",
+    "@devexpress/dx-react-scheduler": "^3.0.1",
+    "@devexpress/dx-react-scheduler-material-ui": "^3.0.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@faker-js/faker": "^7.3.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.93",
+    "@mui/material": "^5.9.2",
+    "@mui/styles": "^5.10.2",
+    "@mui/x-date-pickers": "^5.0.0",
+    "@react-pdf/renderer": "^3.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.47",
+    "@types/react": "^18.0.15",
+    "@types/react-calendar": "^3.5.2",
+    "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.35.4",
+    "buffer": "^6.0.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-calendar": "^3.7.0",
+    "react-data-table-component": "^7.5.2",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-json-editor-ajrm": "^2.5.13",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.4.0",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -100,14 +118,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.15",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.20",
     "babel-loader": "^8.2.5",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.7.4",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-json-editor-ajrm": "^2.5.3",
+    "@types/styled-components": "^5.1.25",
+    "nth-check": ">=2.0.1"
   },
   "engines": {
     "node": "16.x",
