--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bulma": "^0.9.4",
     "bulma-toast": "^2.4.1",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.6",
     "eslint-auto-fix": "^1.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
