--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-jutsu": "^3.0.3",
     "react-leaflet": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-paystack": "^4.0.1",
     "react-pdf": "^6.1.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.4.3",
@@ -83,7 +84,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start NODE_OPTIONS=--max-old-space-size=4096",
     "start:dev": "react-scripts start",
     "start:prod": "yarn build && serve -s build",
     "build": "CI=false react-scripts build",
